syntax = "proto3";

import "Responses.proto";
import "Requests.proto";

service ModelControllerService {
  rpc AddTask(AddTaskRequest) returns (AddTaskResponse) {}
  rpc AddSubTask(AddSubTaskRequest) returns (AddSubTaskResponse) {}
  rpc EditTask(EditTaskRequest) returns (EditTaskResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  rpc CompleteTask(CompleteTaskRequest) returns (CompleteTaskResponse) {}
  rpc ShowByLabel(ShowByLabelRequest) returns (ShowByLabelResponse) {}
  rpc ShowParents(ShowParentsRequest) returns (ShowParentsResponse) {}
  rpc ShowTask(ShowTaskRequest) returns (ShowTaskResponse) {}
  rpc ShowAll(ShowAllRequest) returns (ShowAllResponse) {}
  rpc Save(SaveRequest) returns (SaveResponse) {}
  rpc Load(LoadRequest) returns (LoadResponse) {}
}