syntax = "proto3";

message TaskId {
  int32 value = 1;
}